--- a/metadata.yaml
+++ b/metadata.yaml
@@ -49,5 +49,7 @@ language: fr
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: Aventures de Baron de Münchausen
 url: http://www.gutenberg.org/ebooks/50398
